@@ -23,6 +23,7 @@ Cacti CHANGELOG
 -issue#5802: Cacti should not convert non-base tables as they may have an focused characters set and engine
 -issue#5806: Issues with Cacti posix_kill wrapper in Windows
 -issue#5813: Can't change password when first installing
+-issue#5823: If active theme is missing ensure the fallback is not the classic theme
 -issue#5824: Properly cache the data source information for dsstats processing
 -feature#5784: Provide a means by which a user can track Cacti connections and disconnects from the php error_log
 -feature#5796: Due to Conflicting Interpretations of TCP Ping, Introduce new Ping Method
